--- a/contact us.html
+++ b/contact us.html
@@ -96,6 +96,10 @@
 
       
          <div class="container">
+             <div class="container">
+                 <h3> Scholarship for Cambodia </h3>
+                 <p> ដោយមើលឃើញពីបញ្ហាលំបាករបស់សិស្សជាច្រើនក្នុងការស្វែងរកអាហាររូបករណ៍ទៅសិក្សានៅបរទេសក៏ដូចជាអាហាររូបករណ៍ក្នុងស្រុក ដូច្នេះពូកយើងក៏សម្រេចចិត្តបង្កើតវេបសាយនេះឡើង។ វេបសាយនេះបង្កើតឡើងក្នុងគោលបំណងជួយផ្សព្វផ្សាយព័ត៌មានទាក់ទងនឹងអាហាររូបករណ៍ផ្សេងៗអោយកាន់​តែទូលំទូលាយ។</p>
+             </div>
 
             <div class="row">
                 <div class="col-2"></div>
@@ -110,7 +114,7 @@
                <div class="col-2">
                   <img class="rounded-circle" style="width: 18rem;" src="https://z-p3-scontent.fpnh18-3.fna.fbcdn.net/v/t1.0-9/118175273_2422841798016454_7512749369154338776_n.jpg?_nc_cat=103&ccb=2&_nc_sid=174925&_nc_eui2=AeF6rF02hJorJu9lQNiPlRaF_M92PINQepb8z3Y8g1B6loS-vViW37WbEedOTrr7N9T_HehpjAYTBV4-6XF7rAnL&_nc_ohc=fA1nR_ZTXPQAX98RSf1&_nc_ht=z-p3-scontent.fpnh18-3.fna&oh=c961fa0d514c99860d15e698f1294f90&oe=5FFB405E" alt="Leav Chan Dara">
                   <div class="text-center">
-                    <h2>Leav Chan Dara</h2>
+                    <h5>Leav ChanDara</h5>
                   </div>
                   <div class="text-center">
                      <a href="https://web.facebook.com/leav.chandara"><i class="fab fa-facebook fa-lg"></i></a>&nbsp;
@@ -121,7 +125,7 @@
                <div class="col-2">
                   <img class="rounded-circle" style="width: 18rem;" src="https://z-p3-scontent.fpnh18-1.fna.fbcdn.net/v/t1.0-9/127278990_1271592736537593_965136852605287300_n.jpg?_nc_cat=108&ccb=2&_nc_sid=09cbfe&_nc_eui2=AeFRHUrAQHgVMUj0_FwQikD_b-7L_MUlAyVv7sv8xSUDJa0fgxogJJkj3foFPhH0a-oHzhOoYsrpWqCBXO6ZXkpS&_nc_ohc=j2hiuXgAXjYAX_nzADE&_nc_ht=z-p3-scontent.fpnh18-1.fna&oh=6c983a3d7b43d690bb531ca51d448a01&oe=5FFAD06B" alt="ly nary">
                   <div class="text-center">
-                    <h2>Ly Nary</h2>
+                    <h5>Ly Nary</h5>
                   </div>
                   <div class="text-center">
                      <a href="https://web.facebook.com/profile.php?id=100010606367727"><i class="fab fa-facebook fa-lg"></i></a>&nbsp;
@@ -131,11 +135,6 @@
                <div class="col"></div>
             </div>
          </div> <br>
-         <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4"><span class="btn btn-primary text-white text-center"><h2>OR</h2></span></div>
-            <div class="col-4"></div>
-         </div><br><br><br>
            <div class="container">
                 <form action="">
                     <div class="form-group">
@@ -159,78 +158,65 @@
         </div><br><br><br>
 <!-- *******************************************************************************************footer************************************************************************* -->
 <footer class="new_footer_area bg_color">
-  <div class="new_footer_top">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-3 col-md-6">
-                  <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-                      <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
-                      <p>Don’t miss any updates of our new templates and extensions.!</p>
-                      <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
-                          <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
-                          <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
-                          <p class="mchimp-errmessage" style="display: none;"></p>
-                          <p class="mchimp-sucmessage" style="display: none;"></p>
-                      </form>
-                  </div>
-              </div>
-              <div class="col-lg-3 col-md-6">
-                  <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-                      <h3 class="f-title f_600 t_color f_size_18">Download</h3>
-                      <ul class="list-unstyled f_list">
-                          <li><a href="#">Company</a></li>
-                          <li><a href="#">Android App</a></li>
-                          <li><a href="#">ios App</a></li>
-                          <li><a href="#">Desktop</a></li>
-                          <li><a href="#">Projects</a></li>
-                          <li><a href="#">My tasks</a></li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-lg-3 col-md-6">
-                  <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
-                      <h3 class="f-title f_600 t_color f_size_18">Help</h3>
-                      <ul class="list-unstyled f_list">
-                          <li><a href="#">FAQ</a></li>
-                          <li><a href="#">Term &amp; conditions</a></li>
-                          <li><a href="#">Reporting</a></li>
-                          <li><a href="#">Documentation</a></li>
-                          <li><a href="#">Support Policy</a></li>
-                          <li><a href="#">Privacy</a></li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-lg-3 col-md-6">
-                  <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
-                      <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
-                      <div class="f_social_icon">
-                          <a href="#" class="fab fa-facebook"></a>
-                          <a href="#" class="fab fa-twitter"></a>
-                          <a href="#" class="fab fa-linkedin"></a>
-                          <a href="#" class="fab fa-pinterest"></a>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <div class="footer_bg">
-          <div class="footer_bg_one"></div>
-          <div class="footer_bg_two"></div>
-      </div>
-  </div>
-  <div class="footer_bottom">
-      <div class="container">
-          <div class="row align-items-center">
-              <div class="col-lg-6 col-sm-7">
-                  <p class="mb-0 f_400">© cakecounter Inc.. 2019 All rights reserved.</p>
-              </div>
-              <div class="col-lg-6 col-sm-5 text-right">
-                  <p>Made with <i class="icon_heart"></i> in <a href="#">CakeCounter</a></p>
-              </div>
-          </div>
-      </div>
-  </div>
-</footer>
+    <div class="new_footer_top">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                        <h3 class="f-title f_600 t_color f_size_18">ទំនាក់ទំនង</h3>
+                        <p>ដើម្បីទទួលបានព័ត៌មានអាហារូបករណ៍ថ្មីៗ !!</p>
+                        <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
+                            <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
+                            <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
+                            <p class="mchimp-errmessage" style="display: none;"></p>
+                            <p class="mchimp-sucmessage" style="display: none;"></p>
+                        </form>
+                    </div>
+                </div>
+                
+                <div class="col-lg-3 col-md-6">
+                    <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
+                        <h3 class="f-title f_600 t_color f_size_18">កម្មវិធីដែលកំពុងពេញនិយម</h3>
+                        <ul class="list-unstyled f_list">
+                            <li><a href="#">ថ្នាក់បណ្ឌិត</a></li>
+                            <li><a href="#">ថ្នាក់អនុបណ្ឌិត</a></li>
+                            <li><a href="#">ថ្នាក់បរិញ្ញាប័ត្រ</a></li>
+                            <li><a href="#">ថ្នាក់មធ្យមសិក្សា</a></li>
+                            <li><a href="#">កម្មវិធីផ្លាស់ប្តូរការសិក្សា</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
+                        <h3 class="f-title f_600 t_color f_size_18">ប្រព័ន្ធទំនាក់ទំនង</h3>
+                        <div class="f_social_icon">
+                            <a href="#" class="fab fa-facebook"></a>
+                            <a href="#" class="fab fa-twitter"></a>
+                            <a href="#" class="fab fa-linkedin"></a>
+                            <a href="#" class="fab fa-pinterest"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer_bg">
+            <div class="footer_bg_one"></div>
+            <div class="footer_bg_two"></div>
+        </div>
+    </div>
+    <div class="footer_bottom">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-sm-7">
+                    <p class="mb-0 f_400">© scholarship for Cambodia All rights reserved.</p>
+                </div>
+                <div class="col-lg-6 col-sm-5 text-right">
+                    <p>Made with <i class="icon_heart"></i> in <a href="#">Scholarship for Cambodia</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+  </footer>
 <!-- *******************************************************************************************footer************************************************************************* --><body>
 
 </body>
